--- a/style.css
+++ b/style.css
@@ -1,39 +1,57 @@
 body {
   width: 100%;
   margin: auto;
+  font-family: "Open Sans", sans-serif;
 }
-
+button {
+  cursor: pointer;
+}
 /* Nanigation style */
 nav {
+  margin-top: 1rem;
   width: 100%;
   display: flex;
-  background-color: #333;
-  color: white;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  position: absolute;
+}
+nav > div {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+nav > div > h1 {
+  font-size: 50px;
+  font-weight: 900;
 }
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 li a,
 .dropbtn {
   display: inline-block;
-  color: white;
+  color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 38px;
   text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 25px;
 }
 
 li a:hover,
 .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: white;
 }
 
 li.dropdown {
@@ -51,12 +69,21 @@ li.dropdown {
 
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 14px 3rem;
   text-decoration: none;
   display: block;
   text-align: center;
 }
-
+.dropdown-about a {
+  padding: 14px 1.5rem;
+}
+.dropdown-gallery a {
+  padding: 14px 2.25rem;
+  color: black;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
 .dropdown-content a:hover {
   background-color: #999797;
 }
@@ -68,15 +95,25 @@ li.dropdown {
 .container {
   width: 100%;
 }
-.row {
-  /* margin: 0; */
+.gallery-section {
+  display: flex;
+  justify-content: center;
   align-items: center;
   padding: 0;
-  display: flex;
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: auto;
+  margin: 35px 0 35px 0;
+}
+.gallery-section > div:nth-child(1),
+.gallery-section > div:nth-child(4),
+.gallery-section > div:nth-child(7) {
+  padding-left: 0px;
+}
+.gallery-section > div:nth-child(3),
+.gallery-section > div:nth-child(6),
+.gallery-section > div:nth-child(9) {
+  padding-right: 0px;
 }
 .row:after {
   content: "";
@@ -84,9 +121,9 @@ li.dropdown {
   clear: both;
 }
 .column {
-  width: 28%;
+  width: 30.53%;
   height: 403px;
-  padding: 20px 20px;
+  padding: 35px 40px;
 }
 .column > img {
   width: 100%;
@@ -211,4 +248,161 @@ img.hover-shadow {
   box-shadow: 15px 8px 15px 0 rgba(0, 0, 0, 0.2),
     0 8px 32px 10px rgba(0, 0, 0, 0.19);
   cursor: pointer;
+}
+.footer {
+  background-color: #536467;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 75px;
+}
+.footer > div {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.footer > div > p {
+  margin-right: 20px;
+  font-size: 16px;
+  color: white;
+}
+.header {
+  width: 100%;
+  height: 100%;
+  min-height: 40rem;
+  background-image: url("./assets//seacost.jpg");
+  background-size: cover;
+  background-position-y: -350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header > div {
+  margin-top: 5rem;
+  padding-left: 50px;
+  width: 50%;
+  color: white;
+}
+.header > div > h1 {
+  font-size: 50px;
+  font-weight: 900;
+  margin-bottom: 0;
+}
+.header > div > div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.header > div > div > button {
+  margin-left: 50px;
+  width: 175px;
+  height: 55px;
+  border-radius: 20px;
+  border: 4px solid white;
+  font-size: 22px;
+  color: white;
+  font-weight: bold;
+  background-color: transparent;
+}
+
+.header > div > div > button:hover {
+  background-color: #53686c;
+  color: white;
+}
+.header > div > div > p {
+  font-size: 21px;
+  font-weight: 600;
+}
+.second-section {
+  max-width: 100%;
+  padding: 50px 95px 50px 95px;
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: lighter;
+  color: #575756;
+}
+.second-section-txt-box {
+  display: flex;
+}
+.second-section > h1 {
+  font-size: 49px;
+  font-weight: bold;
+  color: #53686c;
+  padding: 10px 25px 0 25px;
+  margin: 0;
+}
+.second-section-txt-box > div {
+  width: 50%;
+  padding: 25px;
+}
+.third-section {
+  padding: 50px 115px 50px 115px;
+  background-color: #f9f9f9;
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: lighter;
+  color: #575756;
+}
+.third-section > h1 {
+  margin-top: 0;
+  font-size: 49px;
+  font-weight: bold;
+  color: #53686c;
+}
+.third-section-text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.third-section-text-box > button {
+  width: 200px;
+  height: 50px;
+  border-radius: 20px;
+  border: 4px solid #53686c;
+  font-size: 22px;
+  color: #53686c;
+  font-weight: bold;
+  margin-top: 25px;
+}
+.third-section-text-box > button:hover {
+  background-color: #53686c;
+  color: #f9f9f9;
+}
+.third-section-text-box > p {
+  margin-top: 0;
+}
+.third-section-photo > div:nth-child(1) {
+  background-image: url("./assets/landscape-tree-horizon-mountain-cloud-plant-1410556-pxhere.com.png");
+  min-width: 350px;
+  min-height: 256px;
+  background-size: cover;
+  padding-bottom: 10px;
+  margin: 0 45px 45px 0;
+}
+.third-section-photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 1919px) and (min-width: 1442px) {
+  .column {
+    width: 29.81%;
+  }
+}
+@media (max-width: 1441px) and (min-width: 1026px) {
+  .column {
+    width: 29.61%;
+  }
+}
+@media (max-width: 1025px) and (min-width: 770px) {
+  .column {
+    width: 28.1%;
+  }
+}
+@media (max-width: 769px) {
+  .column {
+    width: 27.89%;
+  }
 }
