--- a/src/css/main.css
+++ b/src/css/main.css
@@ -188,7 +188,7 @@ li.dropdown {
   width: 100%;
   height: 100%;
   min-height: 40rem;
-  background-image: url("../../assets/seacost.jpg");
+  background-image: url("../assets//seacost.jpg");
   background-size: cover;
   background-position-y: -350px;
   display: flex;
