--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     min-height: 40rem;
-    background-image: url("../assets//seacost.jpg");
+    background-image: url("../../assets/seacost.jpg");
     background-size: cover;
     background-position-y: -350px;
     display: flex;
