Fix: change project structure

--- a/src/scss/settings/_mediaqueries.scss
+++ b/src/scss/settings/_mediaqueries.scss
@@ -30,11 +30,11 @@
 }
 @media (max-width: 770px) and (min-width: 426px) {
   .column {
-    width: 27.89% !important;
+    // width: 27.89% !important;
   }
 }
 
-@media (max-width: 425px) {
+@media screen and (max-width: 425px) {
   nav > div:nth-child(1) {
     width: 40%;
   }
