--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ li.dropdown {
 }
 
 .third-section-photo > div:nth-child(1) {
-  background-image: url("../assets/landscape-tree-horizon-mountain-cloud-plant-1410556-pxhere.com.png");
+  background-image: url("../src/assets/landscape-tree-horizon-mountain-cloud-plant-1410556-pxhere.com.png");
   min-width: 350px;
   min-height: 256px;
   background-size: cover;
@@ -188,7 +188,7 @@ li.dropdown {
   width: 100%;
   height: 100%;
   min-height: 40rem;
-  background-image: url("../../assets/seacost.jpg");
+  background-image: url("../src/assets/seacost.jpg");
   background-size: cover;
   background-position-y: -350px;
   display: flex;
@@ -453,12 +453,7 @@ img.hover-shadow {
     width: 40%;
   }
 }
-@media (max-width: 770px) and (min-width: 426px) {
-  .column {
-    width: 27.89% !important;
-  }
-}
-@media (max-width: 425px) {
+@media screen and (max-width: 425px) {
   nav > div:nth-child(1) {
     width: 40%;
   }
