Fix: uncomment mediaqueries

--- a/src/scss/settings/_mediaqueries.scss
+++ b/src/scss/settings/_mediaqueries.scss
@@ -30,7 +30,7 @@
 }
 @media (max-width: 770px) and (min-width: 426px) {
   .column {
-    // width: 27.89% !important;
+    width: 27.89% !important;
   }
 }
 
