--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -1,18 +1,12 @@
-.footer {
+footer {
     background-color: #536467;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     min-height: 75px;
 }
-.footer > div {
+.width--80 {
     width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-}
-.footer > div > p {
-    margin-right: 20px;
-    font-size: 16px;
-    color: white;
+    p {
+        margin-right: 20px;
+        font-size: 16px;
+        color: white;
+    }
 }
