--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -1,48 +1,43 @@
 .header {
     width: 100%;
     height: 100%;
-    min-height: 40rem;
+    min-height: 40em;
     background-image: url("../src/assets/seacost.jpg");
     background-size: cover;
     background-position-y: -350px;
     display: flex;
     align-items: center;
     justify-content: center;
+    div > div {
+        // display: flex;
+        // justify-content: flex-start;
+        // align-items: center;
+        p {
+            font-size: 21px;
+            font-weight: 600;
+        }
+        button {
+            margin-left: 50px;
+            width: 175px;
+            height: 55px;
+            border: 4px solid white;
+            color: white;
+            background-color: transparent;
+        }
+        button:hover {
+            background-color: #53686c;
+            color: white;
+        }
+    }
 }
-.header > div {
+.header-box {
     margin-top: 5rem;
     padding-left: 50px;
     width: 50%;
     color: white;
-}
-.header > div > h1 {
-    font-size: 50px;
-    font-weight: 900;
-    margin-bottom: 0;
-}
-.header > div > div {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-.header > div > div > button {
-    margin-left: 50px;
-    width: 175px;
-    height: 55px;
-    border-radius: 20px;
-    border: 4px solid white;
-    font-size: 22px;
-    color: white;
-    font-weight: bold;
-    background-color: transparent;
-}
-
-.header > div > div > button:hover {
-    background-color: #53686c;
-    color: white;
-}
-
-.header > div > div > p {
-    font-size: 21px;
-    font-weight: 600;
+    h1 {
+        font-size: 50px;
+        font-weight: 900;
+        margin-bottom: 0;
+    }
 }
