--- a/src/scss/elements/_secontSection.scss
+++ b/src/scss/elements/_secontSection.scss
@@ -1,22 +1,8 @@
-.second-section {
-    max-width: 100%;
-    padding: 50px 95px 50px 95px;
-    font-size: 16px;
-    font-family: "Open Sans", sans-serif;
-    font-weight: lighter;
-    color: #575756;
-}
-.second-section-txt-box {
-    display: flex;
-}
-.second-section > h1 {
-    font-size: 49px;
-    font-weight: bold;
-    color: #53686c;
-    padding: 10px 25px 0 25px;
-    margin: 0;
-}
-.second-section-txt-box > div {
-    width: 50%;
-    padding: 25px;
+.container__div {
+    div:nth-child(1) {
+        padding-right: 25px;
+    }
+    div:nth-child(2) {
+        margin-left: 25px;
+    }
 }
