--- a/src/scss/settings/_mediaqueries.scss
+++ b/src/scss/settings/_mediaqueries.scss
@@ -1,15 +1,15 @@
 @media (max-width: 1919px) and (min-width: 1442px) {
-  .column {
+  .gallery__column {
     width: 29.81%;
   }
 }
 @media (max-width: 1441px) and (min-width: 1026px) {
-  .column {
+  .gallery__column {
     width: 29.61%;
   }
 }
 @media (max-width: 1025px) and (min-width: 772px) {
-  .column {
+  .gallery__column {
     width: 29.9999%;
     padding: 20px 25px;
   }
@@ -29,7 +29,7 @@
   }
 }
 @media (max-width: 770px) and (min-width: 426px) {
-  .column {
+  .gallery__column {
     width: 27.89% !important;
   }
 }
@@ -53,7 +53,7 @@
   .second-section-txt-box > div {
     width: 100%;
   }
-  .gallery-section {
+  .gallery {
     flex-direction: column-reverse;
   }
   .column {
