--- a/css/main.css
+++ b/css/main.css
@@ -261,7 +261,7 @@ li.dropdown {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: black;
+  background-color: white;
 }
 
 /* Modal Content */
@@ -275,7 +275,7 @@ li.dropdown {
 
 /* The Close Button */
 .close {
-  color: white;
+  color: black;
   position: absolute;
   top: 10px;
   right: 25px;
@@ -389,7 +389,7 @@ footer {
     width: 29.61%;
   }
 }
-@media (max-width: 1025px) and (min-width: 772px) {
+@media (max-width: 1025px) {
   .gallery__column {
     width: 29.9999%;
     padding: 20px 25px;
@@ -413,43 +413,49 @@ footer {
     width: 40%;
   }
 }
-@media (max-width: 770px) and (min-width: 426px) {
+@media (max-width: 980px) {
   .gallery__column {
-    width: 27.89% !important;
-  }
-}
-@media screen and (max-width: 425px) {
-  nav > div:nth-child(1) {
-    width: 40%;
-  }
-
-  .third-section-photo {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-
-  .third-section-photo > div:nth-child(1) {
-    min-height: 600px;
-    margin: 40px 0 40px 0;
     width: 100%;
-  }
-
-  .second-section-txt-box {
-    flex-direction: column-reverse;
-  }
-
-  .second-section-txt-box > div {
-    width: 100%;
-  }
-
-  .gallery {
-    flex-direction: column-reverse;
-  }
-
-  .column {
-    width: 100%;
-    margin-top: 30px;
     height: 100%;
-    padding: 0;
+  }
+
+  .container__div {
+    flex-direction: column;
+  }
+
+  li a,
+.dropbtn {
+    padding: 14px 16px;
+  }
+
+  .container__box {
+    flex-direction: column;
+  }
+
+  .container__box--start {
+    flex-direction: row;
+  }
+
+  .header {
+    background-position-y: -95px;
+    min-height: 35rem;
+  }
+
+  .container__div div:nth-child(2) {
+    margin-left: 0;
+  }
+
+  .container__box--photo {
+    width: 100%;
+    min-height: 800px;
+    margin: 30px 0 50px 0;
+  }
+
+  .gallery__column {
+    padding: 30px 0 30px 0;
+  }
+
+  footer {
+    min-height: 0px;
   }
 }
