--- a/src/scss/elements/_gallery.scss
+++ b/src/scss/elements/_gallery.scss
@@ -47,7 +47,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: black;
+    background-color: white;
 }
 
 /* Modal Content */
@@ -61,7 +61,7 @@
 
 /* The Close Button */
 .close {
-    color: white;
+    color: black;
     position: absolute;
     top: 10px;
     right: 25px;
