--- a/src/scss/settings/_mediaqueries.scss
+++ b/src/scss/settings/_mediaqueries.scss
@@ -8,58 +8,64 @@
     width: 29.61%;
   }
 }
-@media (max-width: 1025px) and (min-width: 772px) {
+@media (max-width: 1025px) {
   .gallery__column {
     width: 29.9999%;
     padding: 20px 25px;
   }
+
   nav > div > h1 {
     font-size: 40px;
   }
+
   li a,
   .dropbtn {
     font-size: 18px;
   }
+
   .header {
     background-position-y: -150px;
     min-height: 30rem;
   }
+
   .header > div:nth-child(1) {
     width: 40%;
   }
 }
-@media (max-width: 770px) and (min-width: 426px) {
+@media (max-width: 980px) {
   .gallery__column {
-    width: 27.89% !important;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  nav > div:nth-child(1) {
-    width: 40%;
-  }
-  .third-section-photo {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-  .third-section-photo > div:nth-child(1) {
-    min-height: 600px;
-    margin: 40px 0 40px 0;
     width: 100%;
-  }
-  .second-section-txt-box {
-    flex-direction: column-reverse;
-  }
-  .second-section-txt-box > div {
-    width: 100%;
-  }
-  .gallery {
-    flex-direction: column-reverse;
-  }
-  .column {
-    width: 100%;
-    margin-top: 30px;
     height: 100%;
-    padding: 0;
+  }
+  .container__div {
+    flex-direction: column;
+  }
+  li a,
+  .dropbtn {
+    padding: 14px 16px;
+  }
+  .container__box{
+    flex-direction: column;
+  }
+  .container__box--start {
+    flex-direction: row;
+  }
+  .header {
+    background-position-y: -95px;
+    min-height: 35rem;
+  }
+  .container__div div:nth-child(2) {
+    margin-left: 0;
+  }
+  .container__box--photo {
+    width: 100%;
+    min-height: 800px;
+    margin: 30px 0 50px 0;
+  }
+  .gallery__column {
+    padding: 30px 0 30px 0;
+  }
+  footer {
+    min-height: 0px;
   }
 }
